Finished the first lesson. Still need to make and add Problem Set 1.

--- a/Functions_TheBasics.html
+++ b/Functions_TheBasics.html
@@ -88,7 +88,7 @@
             </div>
             <div>
                 <button onclick="window.location.href='calculus1.html'" class="previous_button">
-                    Previous: Calculus I
+                    Previous: Single Variable Calculus
                 </button>
                 <button onclick="window.location.href='LimitOfAFunction.html'" class="next_button">
                     Next: Limit of a Function
