--- a/LimitOfAFunction.html
+++ b/LimitOfAFunction.html
@@ -89,6 +89,20 @@
                     as we approach only from the left hand side, i.e. \(x&lt;\alpha\). So, whereas before we would be looking from both sides of the
                     \(x\) value, we are now only considering one.
                     <br><br>
+                    Before continuing on to an example, we feel it is important to reiterate these main points:
+                    <ol>
+                        <li>
+                            The value of \(\lim_{x\to\alpha} f(x)\) depends on the values of \(f(x)\) for \(x\) near \(\alpha\), not for \(x\) equal to \(\alpha\).
+                            Even if \(f(\alpha)\) is defined, it can be changed without having any influence on the value of the limit.
+                        </li>
+                        <li>
+                            If as \(x\) approaches \(\alpha\) the values of \(f(x)\) do not approach any fixed value, we say that \(f(x)\) has no limit as \(x\to\alpha\),
+                            or that \(\lim_{x\to\alpha} f(x)\) does not exist.
+                        </li>
+                        <li>
+                            When evaluating \(\lim_{x\to\alpha} f(x)\) we consider values of \(x\) on both side of \(\alpha\).
+                        </li>
+                    </ol>
                     <b><u>Example:</u></b> Let's evaluate the graph of the piecewise function \(m\), defined by
                     \[
                         \begin{gather*}
