Added Problem Set 1 and made a few changes to other pages

--- a/LimitTechniques.html
+++ b/LimitTechniques.html
@@ -207,11 +207,11 @@
                         </li>
                     </ol>
                     <h4>Lesson Conclusion</h4>
-                    That concludes the section on limits. More practice can be found in <a href="">Problem Set 1</a>, and the solutions to it found <a href="">here</a>. Most of the mathematical
+                    That concludes the section on limits. More practice can be found in <a href="ProblemSet1.pdf">Problem Set 1</a>, and the solutions to it found <a href="">here</a>. Most of the mathematical
                     understanding comes from the problem sets, while the lessons are mainly the theory. Additional resources on limits can be found below as well.
                     <br><br>
                     <h4>Problem Set 1</h4>
-                    <button onclick="window.location.href=''" class="previous_button">Problem Set 1</button> <button onclick="window.location.href=''" class="previous_button">Problem Set 1 Solutions</button>
+                    <button onclick="window.location.href='ProblemSet1.pdf'" class="previous_button">Problem Set 1</button> <button onclick="window.location.href=''" class="previous_button">Problem Set 1 Solutions</button>
                     <h4>Additional Resources</h4>
                     <iframe width="230" height="auto" src="https://www.youtube-nocookie.com/embed/ryLdyDrBfvI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <iframe width="230" height="auto" src="https://www.youtube-nocookie.com/embed/kAv5pahIevE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
