--- a/UndefinedLimits.html
+++ b/UndefinedLimits.html
@@ -86,8 +86,9 @@
                         In fact, \(x=x_0\) is exactly the one value of \(x\) that we don't consider in this limit. Thus, technically, the limit is always very small but never actually \(0\).
                         <br><br>
                         [This proof shows that if a function is differentiable then it is also continuous. That does not necessarily imply that if the function is not differentiable then it is also not continuous.
-                        In essence, a function can be continuous and without being differentiable. Take the absolute value function for example, \(\lvert x\rvert\). It is not differentiable at \(x=0\) but it is still
-                        continuous. The function being differentiable is a <i>sufficient condition</i> for continuity, not a <i>necessary condition</i>.]
+                        In essence, a function can be continuous and without being differentiable. Take the absolute value function for example, \(\lvert x\rvert\). Though it is not differentiable at \(x=0\), it is still
+                        continuous. The function being differentiable is a <i>sufficient condition</i> for continuity, not a <i>necessary condition</i>. This theorem does however imply that if a function \(f(x)\) is 
+                        discontinuous at \(x=\alpha\) then \(f(x)\) is not differentiable at \(x=\alpha\).]
                         <br>
                     </div>
                     <br>
@@ -132,9 +133,9 @@
                             \(0\) is equal to negative infinity, \(\lim_{x\to 0^-}\frac{1}{x}=-\infty\).
                         </li>
                         <li>
-                            <b>Other Discontinuities</b>
+                            <b>Essential Discontinuities</b>
                             <br>
-                            The last type of discontinuity that we will cover is the ugliest. There are several examples out there but the one mentioned here is the limit of \(\sin(\frac{1}{x})\)
+                            An essential disoncontinuity is one which doesn't fit any of the previous three types. There are several examples out there but the one mentioned here is the limit of \(\sin(\frac{1}{x})\)
                             as \(x\) approaches \(0\), \(\lim_{x\to 0}\sin(\frac{1}{x})\). The graph of \(\sin(\frac{1}{x})\) is the following:
                             <img class="figure" src="UndefinedLimits_Figure4.png" alt="A graph of the function sin(1/x), showing how ugly it becomes at the origin, x=0.">
                             <br>
